WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32843
REGRESSION(4.0.4-ToT): Indent deletes non highlighted text in gmail
https://bugs.webkit.org/show_bug.cgi?id=32843
Summary
REGRESSION(4.0.4-ToT): Indent deletes non highlighted text in gmail
Enrica Casucci
Reported
2009-12-21 16:13:53 PST
* STEPS TO REPRODUCE 1. create new message in gmail 2. type "two words" (case1), you can also try "oneword" (case2) 3. Select "two" in the first case or "one" in second case 4. Click highlight color button and select any background color, you can also select Text color 5. Select all 6. Click Indent More button once * RESULTS Indent will indent the highlighted text, but will also delete the rest of the text.
Attachments
Patch
(6.62 KB, patch)
2009-12-21 16:25 PST
,
Enrica Casucci
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2009-12-21 16:25:24 PST
Created
attachment 45358
[details]
Patch
WebKit Review Bot
Comment 2
2009-12-21 16:33:37 PST
style-queue ran check-webkit-style on
attachment 45358
[details]
without any errors.
Maciej Stachowiak
Comment 3
2009-12-21 16:48:47 PST
Comment on
attachment 45358
[details]
Patch r=me
Enrica Casucci
Comment 4
2009-12-21 16:59:18 PST
Committed revision 52465.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug