WebCore: REGRESSION(4.0.4-ToT): Indent deletes non highlighted text in gmail. <rdar://problem/7489326> https://bugs.webkit.org/show_bug.cgi?id=32843

Reviewed by Maciej Stachowiak.

The fix for 7442387 did not handle the case where the end of paragraph
is not a descendant of the computed outer block.
Updated editing/execCommand/indent-with-style2.html to cover this case too.

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::cloneParagraphUnderNewElement):

LayoutTests: REGRESSION(4.0.4-ToT): Indent deletes non highlighted text in gmail.
<rdar://problem/7489326>
https://bugs.webkit.org/show_bug.cgi?id=32843

Reviewed by Maciej Stachowiak.

The fix for 7442387 did not handle the case where the end of paragraph
is not a descendant of the computed outer block.
Updated editing/execCommand/indent-with-style2.html to cover this case too.

* editing/execCommand/indent-with-style2-expected.txt:
* editing/execCommand/indent-with-style2.html:



Canonical link: https://commits.webkit.org/43878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52465 268f45cc-cd09-0410-ab3c-d52691b4dbfc